--- a/LexiconUniversity/Views/Enrollments/Index.cshtml
+++ b/LexiconUniversity/Views/Enrollments/Index.cshtml
@@ -12,30 +12,18 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Grade)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Person)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Course)
-            </th>
+            <th>@Html.DisplayNameFor(model => model.Grade)            </th>
+            <th>@Html.DisplayNameFor(model => model.Person)            </th>
+            <th>@Html.DisplayNameFor(model => model.Course)            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Grade)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Person.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Course.Id)
-            </td>
+            <td> @Html.DisplayFor(modelItem => item.Grade)            </td>
+            <td> @Html.DisplayFor(modelItem => item.Person.Name)            </td>
+            <td> @Html.DisplayFor(modelItem => item.Course.Title)            </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
